fix: really annoying alignment in messages

--- a/src/components/TextChannel/Message/index.module.scss
+++ b/src/components/TextChannel/Message/index.module.scss
@@ -27,7 +27,7 @@
 	}
 
 	.messageInfo {
-		width: 32px;
+		min-width: 32px;
 		display: flex;
 		justify-content: center;
 		font-size: 0.7em;
@@ -71,7 +71,6 @@
 		display: flex;
 		flex-direction: column;
 		width: 100%;
-		align-items: start;
 
 		.messageMeta {
 			font-size: 0.75rem;
